--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@ body,td,th {
   <div class="tabla">
     <table width="894" height="405" border="1" align="center">
       <tr>
-        <td width="342"><a href="file:///C:/Users/mrloboa/Desktop/juego%201/pato.html"><img src="animales/pato.png" width="403" height="391" /></a></td>
-        <td width="474"><a href="file:///C:/Users/mrloboa/Desktop/juego%201/caballo.html"><img src="animales/caba.png" width="324" height="286" /></a></td>
-        <td width="56"><a href="file:///C:/Users/mrloboa/Desktop/juego%201/elefante.html"><img src="animales/ELE.png" width="326" height="328" /></a></td>
+        <td width="342"><a href="https://mrloboa.github.io/pato/"><img src="animales/pato.png" width="403" height="391" /></a></td>
+        <td width="474"><a href="https://mrloboa.github.io/caballo/"><img src="animales/caba.png" width="324" height="286" /></a></td>
+        <td width="56"><a href="https://mrloboa.github.io/elefante-/"><img src="animales/ELE.png" width="326" height="328" /></a></td>
       </tr>
       <tr>
-        <td><a href="file:///C:/Users/mrloboa/Desktop/juego%201/gallina.html"><img src="animales/galli.png" width="325" height="314" /></a></td>
-        <td><a href="file:///C:/Users/mrloboa/Desktop/juego%201/gato.html"><img src="animales/gato.png" width="359" height="362" /></a></td>
-        <td><a href="file:///C:/Users/mrloboa/Desktop/juego%201/leon.html"><img src="animales/lion.png" width="322" height="349" /></a></td>
+        <td><a href="https://mrloboa.github.io/gallina/"><img src="animales/galli.png" width="325" height="314" /></a></td>
+        <td><a href="https://mrloboa.github.io/gato/"><img src="animales/gato.png" width="359" height="362" /></a></td>
+        <td><a href="https://mrloboa.github.io/leon/"><img src="animales/lion.png" width="322" height="349" /></a></td>
       </tr>
       <tr>
-        <td><a href="file:///C:/Users/mrloboa/Desktop/juego%201/mono.html"><img src="animales/MON.png" width="289" height="335" /></a></td>
-        <td><a href="file:///C:/Users/mrloboa/Desktop/juego%201/perro.html"><img src="animales/perro.png" width="251" height="361" align="middle" /></a></td>
-        <td><a href="file:///C:/Users/mrloboa/Desktop/juego%201/vaca.html"><img src="animales/vaca.png" width="330" height="365" /></a></td>
+        <td><a href="https://mrloboa.github.io/mono/"><img src="animales/MON.png" width="289" height="335" /></a></td>
+        <td><a href="https://mrloboa.github.io/perro/"><img src="animales/perro.png" width="251" height="361" align="middle" /></a></td>
+        <td><a href="https://mrloboa.github.io/vaca/"><img src="animales/vaca.png" width="330" height="365" /></a></td>
       </tr>
     </table>
   </div>
